deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-mlapp
  labels:
    app: my-mlapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-mlapp
  template:
    metadata:
      labels:
        app: my-mlapp
    spec:
      containers:
      - name: mlapp-container
        image: abeshith/mlapp:latest
        ports:
        - containerPort: 5000
