service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlapp-service
spec:
  type: NodePort
  selector:
    app: my-mlapp
  ports:
    - port: 80

      targetPort: 5000

      nodePort: 30007
