ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/demo"
        backend:
          service:
            name: mlapp-service
            port:
              number: 80
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/admin"
        backend:
          service:
            name: mlapp-service
            port:
              number: 80
